updated carousel homepage and new soccer shirts

--- a/markup/_layouts/_content/_homepage/field-soccer.jade
+++ b/markup/_layouts/_content/_homepage/field-soccer.jade
@@ -6,7 +6,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 			form.form-signin.dropdown-my-teams
 				.input-group
 					select#country.form-control.custom-select(placeholder='COUNTRY', required='')
-						option(selected='' disabled='' hidden='') Main best NFL Team!
+						option(selected='' disabled='' hidden='') My best soccer team!
 						option Other amazing team name1!
 						option Other amazing team name2!
 						option Other amazing team name3!
@@ -18,57 +18,57 @@ div.nl-section.nl-create-team.homepage-field.soccer
 			div.nl-team-field
 					div.player-main-block.soccer
 						div.nl-player-block.nl-GK-position(data-position="GK")
-							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
+							img(src="assets/img/soccer/GK.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DL-position(data-position="DL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/D-L.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DR-position(data-position="DR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/D-R.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-FLEXL-position(data-position="DL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
+							img(src="assets/img/soccer/FLEX-L.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DM-position(data-position="DM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/D-M.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-MM-position(data-position="MM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/M-M.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-MR-position(data-position="MR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/M-R.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-ML-position(data-position="ML")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/M-L.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/FLEX-R.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-AL-position(data-position="AL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/A-L.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-AR-position(data-position="AR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/A-R.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
