--- a/markup/_layouts/_content/_index/nl-section-works.jade
+++ b/markup/_layouts/_content/_index/nl-section-works.jade
@@ -3,8 +3,8 @@ section.nl-section.nl-works
         div.row.align-items-center
             div.col-lg-6
                 div#video
-                    a(href="https://www.youtube.com/watch?v=r5saLZQnEaA")
+                    a(href="https://www.youtube.com/watch?v=G2BJG1rRqM8&feature=youtu.be")
                         img(src="assets/img/nl-section-works-video.jpg" alt="" )
             div.col-lg-6
-                h2 see how it works
+                h2 NLC2 & Joe Theismann
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas erat libero, vehicula quis orci vel, vulputate vehicula diam. Phasellus vulputate sem nisi. Donec id nunc a justo facilisis lobortis.
