--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -51,7 +51,7 @@ mixin list-of-teams(times)
 						p Best team evah
 						p.italic Best manager evah
 					div.rank__thumb
-						img(src="assets/img/helmet-2", alt="")
+						img(src="assets/img/soccer/A-R.png", alt="")
 				table.table.table-info3
 					thead
 						tr
@@ -302,69 +302,69 @@ section.nl-section.nl-players.nl-live-score.soccer
 				div.nl-team-field
 					div.player-main-block.soccer
 						div.nl-player-block.nl-GK-position(data-position="GK")
-							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-DL-position(data-position="DL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p.playing gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-DR-position(data-position="DR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-DM-position(data-position="DM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/GK.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.not-playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-DL-position(data-position="DL")
+							img(src="assets/img/soccer/D-L.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.played gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-DR-position(data-position="DR")
+							img(src="assets/img/soccer/D-R.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.not-playing gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
+							img(src="assets/img/soccer/FLEX-L.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.played gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-DM-position(data-position="DM")
+							img(src="assets/img/soccer/D-M.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-MM-position(data-position="MM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/M-M.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-MR-position(data-position="MR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p.playing gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-ML-position(data-position="ML")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+							img(src="assets/img/soccer/M-R.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.played gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-ML-position(data-position="ML")
+							img(src="assets/img/soccer/M-L.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-AL-position(data-position="AL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
+							img(src="assets/img/soccer/FLEX-R.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p.not-playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-AR-position(data-position="AR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-AL-position(data-position="AL")
+							img(src="assets/img/soccer/A-L.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.played gronkowski
+								p gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-AR-position(data-position="AR")
+							img(src="assets/img/soccer/A-R.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 
@@ -509,9 +509,19 @@ section.nl-section.nl-players.nl-live-score.soccer
 										p.orange Dharmesh
 									div.col-8.col-lg-9
 										p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-
-
-
+		div.row
+			div.col-12.text-center
+				div.nl-status-wrapper
+					ul
+						li
+							span.playing.indicator
+							span Playing
+						li
+							span.played.indicator
+							span Played
+						li
+							span.not-playing.indicator
+							span Not Playing
 		div.row
 			+list-of-teams(12)
 		div.row
