--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -1,37 +1,35 @@
 //Navigation Fixed Block
 header.nl-header
-    div.nl-header--top
-        div.container-fluid
-            div.row.align-items-start
-                div.col-4.col-lg-2
-                    div.nl-logotype
-                        a(href="index.html")
-                            img(src="assets/img/logotype.png" alt="NO Limit")
-                div.col-1.col-lg-7
-                    div.nl-title The worlds first crypto fantasy sports
-                div.col-12.col-lg-3
-                    div.nl-button-login
-                        a.btn.btn-primary.nl-m-r-15(href="login.html") Login
-                        a.btn(href="register.html") SIGN UP
+	div.nl-header--top
+		div.container-fluid
+			div.row.align-items-start
+				div.col-4.col-lg-2
+					div.nl-logotype
+						a(href="index.html")
+							img(src="assets/img/logotype.png" alt="NO Limit")
+				div.col-1.col-lg-7
+					div.nl-title The worlds first crypto fantasy sports
+				div.col-12.col-lg-3
+					div.nl-button-login
+						a.btn.btn-primary.nl-m-r-15(href="login.html") Login
+						a.btn(href="register.html") SIGN UP
 
-    div.nl-header--slide
-        div.owl-carousel.main-carousel
-            div.item.nl-slides.nl-slide-1
-                div.container-fluid
-                    h1 Draft your line up <br /> with NLC2
-                    div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            //- div.item.nl-slides.nl-slide-2
-            //-     div.container-fluid
-            //-         h1 Challenge Joe h2h <br /> Play with Johnny
-            //-         div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            div.item.nl-slides.nl-slide-3
-                div.container-fluid
-                    h2 Daily Fantasy Soccer <br /> with NLC2
-                    div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-            div.item.nl-slides.nl-slide-4
-                div.container-fluid
-                    h2 Fantasy Football with <br /> NLC2
-                    div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
-
-
+	div.nl-header--slide
+		div.owl-carousel.main-carousel
+			div.item.nl-slides.nl-slide-1
+				div.container-fluid
+					h2 Draft your line up with NoLimitCoins
+					div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+			div.item.nl-slides.nl-slide-5
+				div.container-fluid.circle-JT
+					h2 Heads up Fantasy sports for charity
+					div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+			div.item.nl-slides.nl-slide-6
+				div.container-fluid.circle-JT
+					//- h2 Win tickets to the Main Event of the WSOP vegas
+					//- div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+			div.item.nl-slides.nl-slide-3
+				div.container-fluid
+					h2 Daily Fantasy Soccer with NLC2
+					div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
 
