--- a/markup/_scss/sections/index/_nl-start-winning.scss
+++ b/markup/_scss/sections/index/_nl-start-winning.scss
@@ -6,7 +6,8 @@
   h2{
     @include fontSize(50px);
     @include lineHeight(60px);
-    margin-bottom: 0;
+    margin-bottom: -15px;
+    margin-top: 25px;
   }
   .btn{
     letter-spacing: 2px;
