--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -9555,7 +9555,7 @@ p {
     background: #e98f0b;
     height: 35px; }
   .nl-header--top {
-    padding: 1.6875rem 2.25rem; }
+    padding: 1.1875rem 2.25rem; }
     @media (max-width: 991px) {
       .nl-header--top {
         padding: 1.5625rem 0; } }
@@ -9594,16 +9594,23 @@ p {
         display: none; } }
   .nl-header .nl-button-login {
     text-align: right; }
-  .nl-header--slide .nl-slide-4 {
-    background: url(../img/stadion_full_big.jpg) bottom center no-repeat; }
-  .nl-header--slide .nl-slide-2 {
-    background: url(../img/jj-banner15-san-io.jpg) bottom center no-repeat; }
-    .nl-header--slide .nl-slide-2 h2 {
-      line-height: 5rem; }
+  .nl-header--slide h2 {
+    padding-top: 100px;
+    line-height: 2.5rem;
+    line-height: 3.9375rem;
+    font-size: 4.375rem; }
+  .nl-header--slide .nl-slide-6 {
+    background: url(../img/JC-1.jpg) bottom center no-repeat; }
+  .nl-header--slide .nl-slide-5 {
+    background: url(../img/JT-1.jpg) bottom center no-repeat; }
+    @media (min-width: 1681px) {
+      .nl-header--slide .nl-slide-5 {
+        background-position: top center;
+        background-position-y: -26px; } }
   .nl-header--slide .nl-slide-3 {
-    background: url(../img/soccer-background.jpg) center center no-repeat; }
+    background: url(../img/soccer-background.jpg) bottom center no-repeat; }
   .nl-header--slide .nl-slide-1 {
-    background: url(../img/nl-slide-img3.jpg) top center no-repeat; }
+    background: url(../img/nl-slide-img.jpg) bottom center no-repeat; }
   .nl-header--slide .nl-slides {
     min-height: 31rem;
     background-size: cover;
@@ -9615,39 +9622,19 @@ p {
     align-items: center;
     text-align: center;
     letter-spacing: 0.3125rem; }
+    .nl-header--slide .nl-slides .circle-JT h2 {
+      padding-top: 200px; }
     @media only screen and (min-width: 576px) and (max-width: 767px) {
       .nl-header--slide .nl-slides {
         min-height: 25rem; } }
     .nl-header--slide .nl-slides .btn-lg {
-      font-size: 1.8rem; }
+      font-size: 1.8rem;
+      margin-bottom: 65px; }
   .nl-header--slide h1, .nl-header--slide h2 {
-    font-size: 86px;
-    font-size: 5.375rem;
-    line-height: 6.4375rem;
     text-transform: uppercase;
     font-weight: 700;
     margin: 0;
     text-shadow: 3px 2px 1px black; }
-    @media only screen and (min-width: 1201px) and (max-width: 1366px) {
-      .nl-header--slide h1, .nl-header--slide h2 {
-        font-size: 72px;
-        font-size: 4.5rem;
-        line-height: 5.125rem; } }
-    @media only screen and (min-width: 992px) and (max-width: 1200px) {
-      .nl-header--slide h1, .nl-header--slide h2 {
-        font-size: 72px;
-        font-size: 4.5rem;
-        line-height: 5.125rem; } }
-    @media (max-width: 991px) {
-      .nl-header--slide h1, .nl-header--slide h2 {
-        font-size: 70px;
-        font-size: 4.375rem;
-        line-height: 4.6875rem; } }
-    @media (max-width: 767px) {
-      .nl-header--slide h1, .nl-header--slide h2 {
-        font-size: 40px;
-        font-size: 2.5rem;
-        line-height: 2.8125rem; } }
   .nl-header--slide .owl-dots {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -9657,11 +9644,8 @@ p {
     justify-content: center;
     width: 100%;
     position: absolute;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
     bottom: 0; }
-    @media (max-width: 991px) {
-      .nl-header--slide .owl-dots {
-        margin-bottom: 1.5625rem; } }
     .nl-header--slide .owl-dots .owl-dot {
       padding: 0.375rem;
       border-radius: 0.5625rem;
@@ -10734,7 +10718,7 @@ p {
       .nl-section.homepage #top5-managers-picture .points-in-bar p, .nl-section.homepage #top5-players-picture .points-in-bar p {
         font-size: 18px; }
   .nl-section.homepage #top-player {
-    max-height: 237px;
+    max-height: 225px;
     margin: 0 auto;
     width: auto; }
     @media only screen and (max-width: 575px) {
@@ -10746,7 +10730,7 @@ p {
         height: 100%; } }
     @media only screen and (min-width: 992px) and (max-width: 1200px) {
       .nl-section.homepage #top-player {
-        max-width: 240px; } }
+        max-width: 262px; } }
   .nl-section.homepage #top-manager {
     max-height: 210px;
     margin: 0 auto;
@@ -10890,19 +10874,19 @@ p {
       font-weight: 500; } }
 
 .homepage .nl-create-team .nl-team-field .soccer.player-main-block img {
-  max-width: 55px; }
+  max-width: 68px; }
   @media (min-width: 1367px) and (max-width: 1440px) {
     .homepage .nl-create-team .nl-team-field .soccer.player-main-block img {
-      max-width: 58px; } }
+      max-width: 72px; } }
   @media (min-width: 1681px) {
     .homepage .nl-create-team .nl-team-field .soccer.player-main-block img {
-      max-width: 63px; } }
+      max-width: 68px; } }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .homepage .nl-create-team .nl-team-field .soccer.player-main-block {
     min-height: 344px; }
     .homepage .nl-create-team .nl-team-field .soccer.player-main-block img {
-      max-width: 45px; } }
+      max-width: 53px; } }
 
 .homepage .nl-create-team.soccer .player-main-block {
   width: 100%;
@@ -12304,7 +12288,8 @@ td:nth-child(4).homepage-list-view {
     font-size: 50px;
     font-size: 3.125rem;
     line-height: 3.75rem;
-    margin-bottom: 0; }
+    margin-bottom: -15px;
+    margin-top: 25px; }
   .nl-start-winning .btn {
     letter-spacing: 2px;
     margin-top: 50px; }
@@ -13229,11 +13214,11 @@ td:nth-child(4).homepage-list-view {
 
 @media (min-width: 1367px) and (max-width: 1500px) {
   .nl-create-team.soccer .nl-team-field .nl-player-block img {
-    max-width: 65px; } }
+    max-width: 72px; } }
 
 @media (min-width: 1500px) {
   .nl-create-team.soccer .nl-team-field .nl-player-block img {
-    max-width: 70px; } }
+    max-width: 83px; } }
 
 .nl-create-team {
   padding-left: 0.875rem;
@@ -13719,7 +13704,7 @@ td:nth-child(4).homepage-list-view {
       min-height: 408px; }
       .nl-create-team .nl-team-field .soccer.player-main-block img,
       .nl-live-score .nl-team-field .soccer.player-main-block img {
-        max-width: 50px; }
+        max-width: 66px; }
     .nl-create-team .nl-team-field .football .nl-RRB-position,
     .nl-live-score .nl-team-field .football .nl-RRB-position {
       bottom: 41%;
@@ -13731,6 +13716,14 @@ td:nth-child(4).homepage-list-view {
     .nl-create-team .nl-team-field .football .nl-QB-position,
     .nl-live-score .nl-team-field .football .nl-QB-position {
       top: 20%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+    .nl-create-team .nl-team-field .soccer.player-main-block img,
+    .nl-live-score .nl-team-field .soccer.player-main-block img {
+      max-width: 70px; } }
+  @media only screen and (min-width: 1367px) and (max-width: 1440px) {
+    .nl-create-team .nl-team-field .soccer.player-block img,
+    .nl-live-score .nl-team-field .soccer.player-block img {
+      max-width: 75px; } }
   @media (min-width: 1200px) and (max-width: 1425px) {
     .nl-create-team .nl-team-field .soccer,
     .nl-live-score .nl-team-field .soccer {
@@ -14679,10 +14672,10 @@ td:nth-child(4).homepage-list-view {
     .nl-enter-contests .nl-team-field .player-main-block {
       min-height: 385px; } }
   .nl-enter-contests .nl-team-field.soccer .nl-player-block img {
-    max-width: 69px; }
+    max-width: 77px; }
     @media only screen and (min-width: 992px) and (max-width: 1200px) {
       .nl-enter-contests .nl-team-field.soccer .nl-player-block img {
-        max-width: 51px; } }
+        max-width: 61px; } }
   .nl-enter-contests .nl-team-field.football {
     background: url(../img/football/nl-football-field.png) no-repeat 0 0;
     background-size: contain;
@@ -14889,7 +14882,7 @@ td:nth-child(4).homepage-list-view {
   margin-bottom: 30px; }
 
 .nl-live-score.soccer .nl-team-field .nl-player-block img {
-  max-width: 50px; }
+  max-width: 61px; }
 
 @media (min-width: 1681px) {
   .nl-live-score.soccer .nl-GK-position {
