--- a/markup/_layouts/_partials/header-form.jade
+++ b/markup/_layouts/_partials/header-form.jade
@@ -2,7 +2,6 @@
 header.nl-header
     div.nl-header--top
         div.container-fluid
-
             div.row.align-items-start
                 div.col-4.col-lg-2
                     div.nl-logotype
@@ -12,8 +11,8 @@ header.nl-header
                     div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-3
                     div.nl-button-login
-                        button.btn.btn-primary.nl-m-r-15(type='button', data-toggle='modal', data-target='#loginModal') Login
-                        button.btn(type='button', data-toggle='modal', data-target='#registrationModal') SIGN UP
+                        a.btn.btn-primary.nl-m-r-15(href="login.html") Login
+                        a.btn(href="register.html") SIGN UP
    //- / div.row.orange-bar
         .col-12.col-lg-12
 
