--- a/markup/_scss/layouts/_header.scss
+++ b/markup/_scss/layouts/_header.scss
@@ -1,22 +1,22 @@
 .nl-header {
 
   .owl-carousel, .owl-stage-outer {
-    max-height: 35rem;
+	max-height: 35rem;
   }
 
   .btn-lg {
-    font-size: 1.8rem;
-    margin-top: 19px;
-    padding: 10px 25px;
+	font-size: 1.8rem;
+	margin-top: 19px;
+	padding: 10px 25px;
   }
 
   button {
-    font-weight: 600;
+	font-weight: 600;
   }
 
   .orange-bar {
-    background: #e98f0b;
-    height: 35px;
+	background: #e98f0b;
+	height: 35px;
   }
 
   @include fontSize(25px);
@@ -25,167 +25,177 @@
   background: #061540;
   min-height: 3.5rem;
   &--top {
-    padding: 1.6875rem 2.25rem;
+	padding: 1.1875rem 2.25rem;
 
-    @include respond-to(allsmall){
-      padding: calculateRem(25px) 0;
-    }
+	@include respond-to(allsmall){
+	  padding: calculateRem(25px) 0;
+	}
   }
   .nl-logotype {
-    position: relative;
-    @include respond-to(allsmall){
-      text-align: center;
+	position: relative;
+	@include respond-to(allsmall){
+	  text-align: center;
 
-    }
-    img {
-      height: 165px;
-      position: absolute;
-      top: 25px;
-      left: 0;
-      margin-top: calculateRem(-80px);
-      max-width: calculateRem(155px);
-      min-width: calculateRem(106px);
-      z-index: 2;
-      @include respond-to(allsmall){
-        max-width: calculateRem(130px);
-        min-width: calculateRem(106px);
-        margin-top: calculateRem(-60px);
-       // position: relative;
-       top: 5px;
-      }
-      @include respond-to(handhelds){
-        top: -7px;
-        height: 151px;
-      }
-    }
+	}
+	img {
+	  height: 165px;
+	  position: absolute;
+	  top: 25px;
+	  left: 0;
+	  margin-top: calculateRem(-80px);
+	  max-width: calculateRem(155px);
+	  min-width: calculateRem(106px);
+	  z-index: 2;
+	  @include respond-to(allsmall){
+		max-width: calculateRem(130px);
+		min-width: calculateRem(106px);
+		margin-top: calculateRem(-60px);
+	   // position: relative;
+	   top: 5px;
+	  }
+	  @include respond-to(handhelds){
+		top: -7px;
+		height: 151px;
+	  }
+	}
   }
 
   .nl-title {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 20px;
-    @include respond-to(allsmall){
-      text-align: center;
-      margin-bottom: calculateRem(30px);
-      display: none;
-    }
+	text-transform: uppercase;
+	font-weight: 600;
+	font-size: 20px;
+	@include respond-to(allsmall){
+	  text-align: center;
+	  margin-bottom: calculateRem(30px);
+	  display: none;
+	}
   }
   .nl-button-login {
-    text-align: right;
-    @include respond-to(allsmall){
-      //text-align: center;
-    }
+	text-align: right;
+	@include respond-to(allsmall){
+	  //text-align: center;
+	}
   }
 
   &--slide {
 
-    .nl-slide-4 {
-      background: url(../img/stadion_full_big.jpg) bottom center no-repeat;
-    }
+	h2 {
+	  padding-top: 100px;
+	  //font-size: 65px;
+	  line-height: 2.5rem;
+	  line-height: 3.9375rem;
+	  font-size: 4.375rem;
+	}
 
-    .nl-slide-2 {
-      background: url(../img/jj-banner15-san-io.jpg) bottom center no-repeat;
-      //background-size: contain !important;
-      //min-height: 32.5rem !important;
+	.nl-slide-6 {
+	  background: url(../img/JC-1.jpg) bottom center no-repeat;
+	}
 
-       h2 {
-          //margin-top: 50px;
-          //font-size: 65px;
-          line-height: 5rem;
-      }
-    }
+	.nl-slide-5 {
+	  background: url(../img/JT-1.jpg) bottom center no-repeat;
 
-    .nl-slide-3 {
-      background: url(../img/soccer-background.jpg) center center no-repeat;
-    }
+	  @include respond-to (extra-large-display) {
+		background-position: top center;
+		background-position-y: -26px;
+	  }
+	}
 
-    .nl-slide-1 {
-      background: url(../img/nl-slide-img3.jpg) top center no-repeat;
-    }
+	.nl-slide-3 {
+	  background: url(../img/soccer-background.jpg) bottom center no-repeat;
+	}
 
-    .nl-slides {
+	.nl-slide-1 {
+	  background: url(../img/nl-slide-img.jpg) bottom center no-repeat;
+	}
 
-      min-height: 31rem;
-      //min-height: 30.5rem !important;
+	.nl-slides {
 
-      //background: url(../img/stadion_full_big.jpg) bottom center no-repeat;
-      background-size: cover;
-     // min-height: calculateRem(500px);
-      display: flex;
-      align-items: center;
-      text-align: center;
-      letter-spacing: calculateRem(5px);
-      @include respond-to(extra-large-display){
-        //min-height: calculateRem(600px);
-      }
-      @include respond-to(allsmall){
-        //min-height: calculateRem(500px);
-        //padding-bottom: calculateRem(60px) ;
-        //padding-top: calculateRem(50px);
-        //background-position: center top;
-      }
-      @include respond-to(allmobile){
-        //min-height: inherit;
-        //padding-bottom: calculateRem(80px) ;
-        //padding-top: calculateRem(70px);
-        //background-position: center top;
-      }
-      @include respond-to(wide-handhelds){
-        min-height: calculateRem(400px);
-      }
+	  .circle-JT {
+		h2 {
 
-      .btn-lg {
-        font-size: 1.8rem;
-      }
-    }
-    h1, h2{
-      @include fontSize(86px);
-      @include lineHeight(103px);
+		  padding-top: 200px;
+		}
+	  }
 
-      text-transform: uppercase;
-      font-weight: 700;
-      margin: 0;
-      text-shadow: 3px 2px 1px black;
+	  min-height: 31rem;
+	  //min-height: 30.5rem !important;
 
-      @include respond-to(medium-display){
-        @include fontSize(72px);
-        @include lineHeight(82px);
-      }
-      @include respond-to(wide-tablets){
-        @include fontSize(72px);
-        @include lineHeight(82px);
-      }
+	  //background: url(../img/stadion_full_big.jpg) bottom center no-repeat;
+	  background-size: cover;
+	 // min-height: calculateRem(500px);
+	  display: flex;
+	  align-items: center;
+	  text-align: center;
+	  letter-spacing: calculateRem(5px);
+	  @include respond-to(extra-large-display){
+		//min-height: calculateRem(600px);
+	  }
+	  @include respond-to(allsmall){
+		//min-height: calculateRem(500px);
+		//padding-bottom: calculateRem(60px) ;
+		//padding-top: calculateRem(50px);
+		//background-position: center top;
+	  }
+	  @include respond-to(allmobile){
+		//min-height: inherit;
+		//padding-bottom: calculateRem(80px) ;
+		//padding-top: calculateRem(70px);
+		//background-position: center top;
+	  }
+	  @include respond-to(wide-handhelds){
+		min-height: calculateRem(400px);
+	  }
 
-      @include respond-to(allsmall){
-        @include fontSize(70px);
-        @include lineHeight(75px);
-      }
-      @include respond-to(allmobile){
-        @include fontSize(40px);
-        @include lineHeight(45px);
-      }
+	  .btn-lg {
+		font-size: 1.8rem;
+		margin-bottom: 65px;
+	  }
+	}
+	h1, h2{
+	  //@include fontSize(86px);
+	  //@include lineHeight(103px);
 
-    }
-    .owl-dots{
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      position: absolute;
-      margin-bottom: calculateRem(40px);
-      bottom: 0;
-      @include respond-to(allsmall){
-        margin-bottom: calculateRem(25px) ;
-      }
-      .owl-dot{
-        padding: calculateRem(6px);
-        border-radius: calculateRem(9px);
-        background: #fff;
-        border: 3px solid #fff;
-        margin: calculateRem(6px) 1.1rem;
-        &.active{
-          background: #ff9f2f;
-        }
-      }
-    }
+	  text-transform: uppercase;
+	  font-weight: 700;
+	  margin: 0;
+	  text-shadow: 3px 2px 1px black;
+
+	  // @include respond-to(medium-display){
+	  //   @include fontSize(72px);
+	  //   @include lineHeight(82px);
+	  // }
+	  // @include respond-to(wide-tablets){
+	  //   @include fontSize(72px);
+	  //   @include lineHeight(82px);
+	  // }
+
+	  // @include respond-to(allsmall){
+	  //   @include fontSize(70px);
+	  //   @include lineHeight(75px);
+	  // }
+	  // @include respond-to(allmobile){
+	  //   @include fontSize(40px);
+	  //   @include lineHeight(45px);
+	  // }
+
+	}
+	.owl-dots{
+	  display: flex;
+	  justify-content: center;
+	  width: 100%;
+	  position: absolute;
+	  margin-bottom: 1.5rem;
+	  bottom: 0;
+	  .owl-dot{
+		padding: calculateRem(6px);
+		border-radius: calculateRem(9px);
+		background: #fff;
+		border: 3px solid #fff;
+		margin: calculateRem(6px) 1.1rem;
+		&.active{
+		  background: #ff9f2f;
+		}
+	  }
+	}
   }
 }
