--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -24,7 +24,7 @@ section.nl-section.nl-my-teams
                             span Not Playing
 
         div.row.nl-m-b-25
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -121,8 +121,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -218,7 +217,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -315,7 +314,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -411,7 +410,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -508,7 +507,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -604,7 +603,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7                                  
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -701,7 +700,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3.smaller-padding-teams
                 .nl-card-wrapper
                     .row
                         .col-12
