new johnny picture and first attempt to payout responsiveness

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -9600,7 +9600,7 @@ p {
     line-height: 3.9375rem;
     font-size: 4.375rem; }
   .nl-header--slide .nl-slide-6 {
-    background: url(../img/JC-1.jpg) bottom center no-repeat; }
+    background: url(../img/JC.jpg) center center no-repeat; }
   .nl-header--slide .nl-slide-5 {
     background: url(../img/JT-1.jpg) bottom center no-repeat; }
     @media (min-width: 1681px) {
