--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -307,7 +307,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 
 #payoutModal.modal.fade(role='dialog' data-backdrop="static" data-keyboard="false")
 	div.row
-		div.col-4.offset-4
+		div.col-10.offset-1.col-sm-8.offset-sm-2.col-lg-6.offset-lg-3
 			.modal-dialog
 				.modal-content
 					div.row
@@ -318,7 +318,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 							button.close(type='button', data-dismiss='modal') ×
 					.modal-body
 						div.row 
-							div.col-8.offset-2
+							div.col-10.offset-1
 								div.row
 									div.col-1.payout-rank   
 										p 1.
