--- a/markup/_scss/layouts/_header.scss
+++ b/markup/_scss/layouts/_header.scss
@@ -88,7 +88,7 @@
 	}
 
 	.nl-slide-6 {
-	  background: url(../img/JC-1.jpg) bottom center no-repeat;
+	  background: url(../img/JC.jpg) center center no-repeat;
 	}
 
 	.nl-slide-5 {
