--- a/markup/_layouts/_content/_index/nl-section-start-winning.jade
+++ b/markup/_layouts/_content/_index/nl-section-start-winning.jade
@@ -21,4 +21,4 @@ section.nl-section.nl-start-winning
                     img(alt="" src="assets/img/nl-start-win-block4.jpg")
                     h3 win
             div.col-6.offset-3.10-free-coins
-                div.btn.btn-primary.10-free-coins get 10 free nlc2 coins
+                div.btn.btn-primary.10-free-coins get free nlc2 coins
