--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -7,12 +7,12 @@ header.nl-header
 					div.nl-logotype
 						a(href="index.html")
 							img(src="assets/img/logotype.png" alt="NO Limit")
-				div.col-1.col-lg-7
+				div.col-1.col-lg-6
 					div.nl-title The worlds first crypto fantasy sports
-				div.col-12.col-lg-3
+				div.col-12.col-lg-4
 					div.nl-button-login
-						a.btn.btn-primary.nl-m-r-15(href="login.html") Login
-						a.btn(href="register.html") SIGN UP
+						a.btn.btn-primary.buttons-index.nl-m-r-15(href="login.html") Login
+						a.btn.buttons-index(href="register.html") SIGN UP
 
 	div.nl-header--slide
 		div.owl-carousel.main-carousel
