--- a/markup/_scss/layouts/_header.scss
+++ b/markup/_scss/layouts/_header.scss
@@ -1,7 +1,22 @@
 .nl-header {
 
+	.buttons-index {
+		margin-left: 10px;
+	}
+
+
   .owl-carousel, .owl-stage-outer {
-	max-height: 35rem;
+	min-height: 35rem;
+
+	@include respond-to(wide-handhelds){
+		min-height: 25rem;	
+		max-height: 28rem;
+	}	
+
+	@include respond-to (extra-large-display) {
+		min-height: 45rem;
+	}
+
   }
 
   .btn-lg {
@@ -63,7 +78,8 @@
   .nl-title {
 	text-transform: uppercase;
 	font-weight: 600;
-	font-size: 20px;
+	font-size: 19px;
+	padding-top: 5px;
 	@include respond-to(allsmall){
 	  text-align: center;
 	  margin-bottom: calculateRem(30px);
@@ -79,16 +95,12 @@
 
   &--slide {
 
-	h2 {
-	  padding-top: 100px;
-	  //font-size: 65px;
-	  line-height: 2.5rem;
-	  line-height: 3.9375rem;
-	  font-size: 4.375rem;
+	.nl-slide-1 {
+	  background: url(../img/nl-slide-img.jpg) bottom center no-repeat;
 	}
 
-	.nl-slide-6 {
-	  background: url(../img/JC.jpg) center center no-repeat;
+	.nl-slide-3 {
+	  background: url(../img/soccer-background.jpg) bottom center no-repeat;
 	}
 
 	.nl-slide-5 {
@@ -96,89 +108,121 @@
 
 	  @include respond-to (extra-large-display) {
 		background-position: top center;
-		background-position-y: -26px;
 	  }
 	}
 
-	.nl-slide-3 {
-	  background: url(../img/soccer-background.jpg) bottom center no-repeat;
-	}
+	.nl-slide-6 {
+	  background: url(../img/JC-1.jpg) left center no-repeat;
 
-	.nl-slide-1 {
-	  background: url(../img/nl-slide-img.jpg) bottom center no-repeat;
+	  @include respond-to (extra-large-display) {
+		background: url(../img/JC-1-xl-v2.jpg) left center no-repeat;
+	  }
 	}
 
 	.nl-slides {
 
-	  .circle-JT {
-		h2 {
+		background-size: cover;
+		display: flex;
+		align-items: center;
+		text-align: center;
+		letter-spacing: calculateRem(5px);
 
-		  padding-top: 200px;
-		}
-	  }
 
-	  min-height: 31rem;
-	  //min-height: 30.5rem !important;
-
-	  //background: url(../img/stadion_full_big.jpg) bottom center no-repeat;
-	  background-size: cover;
-	 // min-height: calculateRem(500px);
-	  display: flex;
-	  align-items: center;
-	  text-align: center;
-	  letter-spacing: calculateRem(5px);
-	  @include respond-to(extra-large-display){
-		//min-height: calculateRem(600px);
-	  }
-	  @include respond-to(allsmall){
-		//min-height: calculateRem(500px);
-		//padding-bottom: calculateRem(60px) ;
-		//padding-top: calculateRem(50px);
-		//background-position: center top;
-	  }
-	  @include respond-to(allmobile){
-		//min-height: inherit;
-		//padding-bottom: calculateRem(80px) ;
-		//padding-top: calculateRem(70px);
-		//background-position: center top;
-	  }
-	  @include respond-to(wide-handhelds){
-		min-height: calculateRem(400px);
-	  }
-
-	  .btn-lg {
-		font-size: 1.8rem;
-		margin-bottom: 65px;
-	  }
-	}
 	h1, h2{
-	  //@include fontSize(86px);
-	  //@include lineHeight(103px);
 
 	  text-transform: uppercase;
 	  font-weight: 700;
 	  margin: 0;
 	  text-shadow: 3px 2px 1px black;
-
-	  // @include respond-to(medium-display){
-	  //   @include fontSize(72px);
-	  //   @include lineHeight(82px);
-	  // }
-	  // @include respond-to(wide-tablets){
-	  //   @include fontSize(72px);
-	  //   @include lineHeight(82px);
-	  // }
-
-	  // @include respond-to(allsmall){
-	  //   @include fontSize(70px);
-	  //   @include lineHeight(75px);
-	  // }
-	  // @include respond-to(allmobile){
-	  //   @include fontSize(40px);
-	  //   @include lineHeight(45px);
-	  // }
-
 	}
+
+	  h2 {
+	  padding-top: 100px;
+	  //font-size: 65px;
+	  line-height: 2.5rem;
+	  line-height: 3.9375rem;
+	  font-size: 4.375rem;
+
+		  @include respond-to (handhelds) {
+			padding-top: 150px;
+			line-height: 2.4375rem;
+			font-size: 2.375rem;
+		  }
+
+		  @include respond-to (wide-handhelds) {
+			font-size: 2.875rem;
+			line-height: 2.4375rem;
+			padding-top: 150px;		
+		  }
+
+		  @include respond-to (tablets) {
+		  	padding-top: 190px;
+		  }
+
+		  @include respond-to (wide-tablets) {
+		  	padding-top: 170px;
+		  }
+
+		  @include respond-to (medium-display) {
+		  	padding-top: 190px;
+		  }
+
+		  @include respond-to (wide-display) {
+		  	padding-top: 210px; 
+		  }
+
+		  @include respond-to (large-display) {
+		  	padding-top: 210px; 
+		  }
+
+		  @include respond-to (extra-large-display) {
+		  	padding-top: 230px; 
+		  	font-size: 5.875rem;
+			line-height: 5.9375rem;
+		  }
+		}
+
+	  .btn-lg {
+
+		font-size: 1.8rem;
+		margin-bottom: 65px;
+
+		@include respond-to(handhelds){
+			font-size: 1.4rem;
+			margin-bottom: 105px;
+			margin-top: 10px;	
+		}
+
+		@include respond-to (tablets) {
+			font-size: 1.9rem;
+			margin-bottom: 105px;
+			margin-top: 10px;	
+		}
+
+		@include respond-to (allwider) {
+		  	font-size: 2.25rem;
+			margin-bottom: 105px;
+			margin-top: 10px;	
+		  }
+
+
+		@include respond-to (large-display) {
+			//padding: 0.875rem;
+			font-size: 2.5rem;
+			margin-bottom: 105px;
+			margin-top: 10px;	
+		}
+
+		@include respond-to (extra-large-display) {
+			font-size: 3.25rem;	
+			margin-bottom: 105px;
+			margin-top: 10px;	
+		}
+
+	  }
+	}
+
+
 	.owl-dots{
 	  display: flex;
 	  justify-content: center;
@@ -187,8 +231,26 @@
 	  margin-bottom: 1.5rem;
 	  bottom: 0;
 	  .owl-dot{
-		padding: calculateRem(6px);
-		border-radius: calculateRem(9px);
+		
+		padding: 0.375rem;
+		border-radius: 1rem;
+
+
+		@include respond-to (allwider) {
+		  	padding: 0.525rem;
+		  }
+
+
+		@include respond-to (large-display) {
+			//padding: 0.875rem;
+			border-radius: 1rem;
+		}
+
+		@include respond-to (extra-large-display) {
+			padding: 0.875rem;
+			border-radius: 1rem;
+		}
+
 		background: #fff;
 		border: 3px solid #fff;
 		margin: calculateRem(6px) 1.1rem;
@@ -196,6 +258,26 @@
 		  background: #ff9f2f;
 		}
 	  }
+	}
+  }
+
+  .owl-carousel, .owl-stage-outer, .nl-slides {
+	min-height: 30rem;
+	max-height: 30rem;
+
+	@include respond-to (extra-large-display) {
+		min-height: 45rem;
+		max-height: 45rem;
+	}
+
+	@include respond-to(handhelds){
+		min-height: 25rem;
+		max-height: 25rem;
+	}
+
+	@media (min-width: 2350px) {
+		min-height: 55rem;
+		max-height: 55rem;
 	}
   }
 }
