better placeholder names for soccer live scores

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -48,8 +48,8 @@ mixin list-of-teams(times)
 						div.rank__center
 							span 124
 					div.rank__title
-						p Best team evah
-						p.italic Best manager evah
+						p My Best NFL Team
+						p.italic NLC2 Kasper
 					div.rank__thumb
 						#create-helmet.final-helmet(style='display: block;')
 							img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
