--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -17,7 +17,7 @@ mixin repeat(times)
 mixin current-table(times)
 	each i in new Array(times)
 		tr
-			td Touchsdowns all day long!
+			td Penalty shoot-outs!
 			td The best NLC2 team
 			td.orange 114/150
 			td 350
@@ -48,8 +48,8 @@ mixin list-of-teams(times)
 						div.rank__center
 							span 124
 					div.rank__title
-						p Best team evah
-						p.italic Best manager evah
+						p My Best Soccer Team
+						p.italic NLC2 Kasper 
 					div.rank__thumb
 						img(src="assets/img/soccer/A-R.png", alt="")
 				table.table.table-info3
@@ -251,7 +251,7 @@ section.nl-section.nl-players.nl-live-score.soccer
 								form.form-signin.dropdown-my-teams
 									.input-group
 										select#country.form-control.custom-select(placeholder='COUNTRY', required='')
-											option(selected='' disabled='' hidden='') Main best NFL Team!
+											option(selected='' disabled='' hidden='') My best soccer team!
 											option Other amazing team name1!
 											option Other amazing team name2!
 											option Other amazing team name3!
@@ -304,67 +304,67 @@ section.nl-section.nl-players.nl-live-score.soccer
 						div.nl-player-block.nl-GK-position(data-position="GK")
 							img(src="assets/img/soccer/GK.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.not-playing gronkowski
+								p.not-playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-DL-position(data-position="DL")
 							img(src="assets/img/soccer/D-L.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.played gronkowski
+								p.played Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-DR-position(data-position="DR")
 							img(src="assets/img/soccer/D-R.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.not-playing gronkowski
+								p.not-playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
 							img(src="assets/img/soccer/FLEX-L.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.played gronkowski
+								p.played Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-DM-position(data-position="DM")
 							img(src="assets/img/soccer/D-M.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p gronkowski
+								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-MM-position(data-position="MM")
 							img(src="assets/img/soccer/M-M.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p gronkowski
+								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-MR-position(data-position="MR")
 							img(src="assets/img/soccer/M-R.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.played gronkowski
+								p.played Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-ML-position(data-position="ML")
 							img(src="assets/img/soccer/M-L.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p gronkowski
+								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
 							img(src="assets/img/soccer/FLEX-R.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.not-playing gronkowski
+								p.not-playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-AL-position(data-position="AL")
 							img(src="assets/img/soccer/A-L.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p gronkowski
+								p Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 						div.nl-player-block.nl-AR-position(data-position="AR")
 							img(src="assets/img/soccer/A-R.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.playing gronkowski
+								p.playing Ronaldo
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
 
