--- a/markup/_layouts/_partials/header-form.jade
+++ b/markup/_layouts/_partials/header-form.jade
@@ -8,7 +8,7 @@ header.nl-header
                         a(href="index.html")
                             img(src="assets/img/logotype.png" alt="NO Limit")
                 div.col-1.col-lg-6
-                    div.nl-title The worlds first crypto fantasy sportss
+                    div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-4
                     div.nl-button-login
                         a.btn.btn-primary.nl-m-r-15(href="login.html") Login
